--- a/_posts/2022-06-07-demon-maw.md
+++ b/_posts/2022-06-07-demon-maw.md
@@ -6,15 +6,26 @@ tags:
     - lets-read
 ---
 
-There isn't much to a maw demon. It's a huge fanged mouth with enough extra bits
-attached to take it to wherever the food is. While most other demons are
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-demon-maw.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
+There isn't much to a maw demon. It's a huge fanged mouth with some extra bits
+attached so it can move to wherever the food is. While most other demons are
 motivated by rage, hatred, or ruinous ambition, these things just want to
 eat. They're a bit like sharks, drawn to the smell of blood, and will prioritize
 an easy meal over a fight.
 
 Maw demons are still demons, so they prefer their meals bloody and still
-twitching. If there are none like that, they'll advance on the nearest living
-creature.
+twitching. If there are none already in that state, they'll advance on the
+nearest living creature.
 
 The typical maw demon is rather weak as far as demons go, though it still
 presents a big threat to non-combatants. Those who manage to live longer become
@@ -54,3 +65,5 @@ benefit from combat advantage.
 
 During the MM2 reading on the RPG.net forum, someone mentioned that these things
 could be abyssal xorns, and it fits really well with their mechanics.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
