--- a/_posts/2022-06-19-derro.md
+++ b/_posts/2022-06-19-derro.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This post is part of a series! Click [here][1] to see the others.
+
 Derro have been in the game since AD&D 1st Edition, where they appeared in the
 Monster Manual II. They're based on the writings of an American author named
 Richard Sharpe Shaver, who wrote a lot about a civilization of psychic and
@@ -218,3 +220,5 @@ others, and maybe more.
 
 Mechanically they're okay, and you have enough here to make a whole derro-themed
 dungeon. For spice, you could add aboleth leaders and mind flayer allies.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
