--- a/_posts/2022-07-21-drow.md
+++ b/_posts/2022-07-21-drow.md
@@ -6,6 +6,8 @@ tags:
     - lets-read
 ---
 
+This post is part of a series! Click [here][2] to see the others.
+
 We first looked at Drow during our [Let's Read of the Monster Manual and
 Vault][1], and you can read that post by clicking the link. The basic lore of
 the drow remains the same, and this entry adds a bit more alongside some
@@ -86,13 +88,22 @@ Close Burst 1 zone that lasts until the end of the encounter and causes 10
 poison damage to anyone that starts their turn inside.
 
 Other zealots are immune to the zone's damage due to their poison resistance, so
-they have no trouble stepping over the burst corpses of their allies. They'll
+they have no trouble stepping over the ruptured corpses of their allies. They'll
 charge the PCs and hack away without much care for their own wounds, since their
 auras kick in when they're bloodied. They pair well with Leader enemies that
 grant extra attacks, since those could allow them to benefit from the damage
 bonus given by a missed attack more than once.
 
 ## Draegloth Abomination
+
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-drow.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 Abyssal drow often summon, bind, and otherwise ally with demons, but some
 priestesses go further and make their own. Draegloths are created by abyssal
@@ -194,8 +205,8 @@ that do acid and poison damage. They can also use two encounter spells that
 target Fortitude.
 
 **Cruel Banishing** (melee 1) does no damage, but teleports the target 7 squares
-and dazes them (save ends). This is a lot deadlier if there draegoloths on Team
-Monster!
+and dazes them (save ends). This is a lot deadlier if there are draegloths on
+Team Monster!
 
 **Demonic Grasp** (ranged 10) immobilizes the target and suspends them 1 square
 up. Immobilized targets can still fight, they just can't move. However, while
@@ -212,7 +223,7 @@ zealot.
 
 Drow society is matriarchal, and though plenty of career paths are open to drow
 men the loftiest heights of power are usually denied to them. The only way for a
-drow male to be part of the real elite is to become consort to a powerful
+male drow to be part of the real elite is to become consort to a powerful
 priestess.
 
 Being a consort is about more than looking pretty - they're also expected to
@@ -314,3 +325,4 @@ goddess of betrayal, mistress of the cycle of abuse, etc. etc.
 
 
 [1]: https://bira.github.io/octopus-carnival/2020/02/02/drow.html
+[2]: {{ "/projects/mm3-4e" | relative_url }}
