--- a/_posts/2022-07-25-forsaken.md
+++ b/_posts/2022-07-25-forsaken.md
@@ -6,6 +6,8 @@ tags:
     - lets-read
 ---
 
+This post is part of a series! Click [here][1] to see the others.
+
 Later monster books in a D&D edition are usually where you find those monsters
 from previous editions who weren't "iconic" enough to appear earlier, but
 sometimes they're also where you can find some truly ambitious entries. After
@@ -57,6 +59,15 @@ tend to have some vague similarities to PC divine classes, but any divine power
 would come from the Forsaken themselves rather than from a deity.
 
 ### Forsaken Fearwrack
+
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-forsaken-fearwrack.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 Fearwracks are spellcasters who delve deep into the mysteries of fear and death,
 confronting that which most scares the forsaken and inflicting it on
@@ -152,6 +163,15 @@ need to hit them twice to defeat them for good.
 
 ### Forsaken Slaughterer
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-forsaken-slaughterer.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Some Forsaken find the memory of immortality a weight too great to bear. It eats
 at their sanity until their mind snaps, and they're consumed by rage and
 grief. The other forsaken keep these unfortunate individuals in reserve for use
@@ -203,8 +223,8 @@ meddlesome adventurers, but they're far from defenseless if it comes to that.
 
 Masterminds are Level 29 Controllers with 213 HP and the Leader keyword. They're
 masterful warriors, and also employ some magic focused on disrupting divine
-powers. They're surrounded by an **Inspire Reslience** aura (5), which grants an
-extra 40 temporary HP to any forsaken ally who uses Fragment of Immortality
+powers. They're surrounded by an **Inspire Resilience** aura (5), which grants
+an extra 40 temporary HP to any forsaken ally who uses Fragment of Immortality
 within it.
 
 Their basic **khopesh** attack makes the target marked by one of the
@@ -212,8 +232,7 @@ mastermind's allies within 5 squares! So it forces the PC to target that ally
 instead of the mastermind itself, and allows the ally to use any mark-related
 abilities it may have.
 
-They also use a **hand crossbow** that can make a solid ranged basic attack, but
-has no riders.
+They also use a **hand crossbow** that can make a solid ranged basic attack.
 
 Their main spell is **Tainted Wave**, an at-will Close Blast 3 attack that
 targets enemies, deals untyped damage, and makes those it hits lose _all_
@@ -236,8 +255,10 @@ recover an expended power.
 I quite like these guys. Their lore feels epic and horrific at the same time,
 and their mechanics are cool.
 
-I do wonder how the Forsaken perpetuate themselves, since they've been around
-since the Dawn War and are very explicitly not immortal. Perhaps they're still
+I do wonder how the Forsaken perpetuate themselves, as they've been around since
+the Dawn War and are very explicitly not immortal. Perhaps they're still
 _unaging_, or maybe there is a procedure for exposing a mortal victim to the
 fragment of immortality that belonged to a deceased Forsaken, bringing them back
 in a new form Go'auld style.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
