--- a/_posts/2022-08-01-frog.md
+++ b/_posts/2022-08-01-frog.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This post is part of a series! Click [here][1] to see the others.
+
 Every individual roleplayer has a set of D&D monsters they consider "iconic",
 regardless of what the publisher has to say about it. Years ago, I remember one
 such player saying that to him "giant fucking frogs" were the most iconic D&D
@@ -46,9 +48,9 @@ retrieve some heirloom from the belly of a frog who ate its former bearer.
 ## The Monsters
 
 All frogs shown here are Medium Natural Beasts, though you could probably
-home-brew larger specimens if you want. They're Aquatic, which lets them breath
+home-brew larger specimens if you want. They're Aquatic, which lets them breathe
 underwater and gives them bonuses against non-aquatic enemies in underwater
-combat, and they have good Swim speeds and low-light vision.
+combat. They also have good Swim speeds and low-light vision.
 
 ### Thornskin Frog
 
@@ -137,3 +139,5 @@ I'm not sure if I'd go as far as calling huge-ass frogs "iconic D&D monsters",
 but they _are_ cool. These ones are properly froggy in their mechanics, and you
 can probably extend their usefulness by giving them additional levels,
 increasing their size, and giving them a Swallow attack.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
