--- a/_posts/2022-08-02-gargoyle.md
+++ b/_posts/2022-08-02-gargoyle.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-gargoyle.png" | absolute_url }}" width=800/>
+  <figcaption>
+    Not a D&D illustration.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Gargoyles made their 4e debut in the first Monster Manual. I wrote about them
 [here][2]. Though that article includes a whole bunch of gargoyles, most of them
 are from the Monster Vault. When the MM3 was published, we still only had the
@@ -63,11 +74,10 @@ This robust specimen is distinguished by its large horns, which it uses to gore,
 impale and drag victims in combat. It's a Level 8 Brute with 107 HP and all
 standard traits.
 
-Those horns can be used in an **Impaling Charge**, an attack which can (and
-must!) be used as part of a charge. It does heavy damage and grabs the
-target by impaling them in the gargoyle's horns. The target takes 5 ongoing
-damage while the grab lasts. Escaping uses the standard rules (Athletics DC 22
-or Acrobatics DC 19).
+Those horns can be used in an **Impaling Charge**, an attack which must be used
+as part of a charge. It does heavy damage and grabs the target by impaling them
+in the gargoyle's horns. The target takes 5 ongoing damage while the grab
+lasts. Escaping uses the standard rules (Athletics DC 22 or Acrobatics DC 19).
 
 The gargoyle can use **Skewering Drag** as a move action to move half its speed
 and automatically pull the grabbed victim along with it. Neither provokes
@@ -138,5 +148,5 @@ actual game. Still, by combining the MM3 and the MV you have enough variants to
 make that one gargoyle encounter truly memorable.
 
 
-
+[1]: {{ "/projects/mm3-4e" | relative_url }}
 [2]: {{ "/2020/03/12/gargoyle.html" | relative_url }}
