--- a/_posts/2022-08-01-frog.md
+++ b/_posts/2022-08-01-frog.md
@@ -8,7 +8,7 @@ tags:
 
 {::nomarkdown}
 <figure class="center">
-  <img src="{{ "/assets/wir-mm3-4e-frog.png" | absolute_url }}" width=800/>
+  <img src="{{ "/assets/wir-mm3-4e-frog.jpg" | absolute_url }}" width=800/>
   <figcaption>
     Not a D&D illustration.
   </figcaption>
