--- a/_posts/2022-08-02-gargoyle.md
+++ b/_posts/2022-08-02-gargoyle.md
@@ -10,7 +10,7 @@ tags:
 <figure class="center">
   <img src="{{ "/assets/wir-mm3-4e-gargoyle.png" | absolute_url }}" width=800/>
   <figcaption>
-    Not a D&D illustration.
+    Copyright 2010 Wizards of the Coast.
   </figcaption>
 </figure>
 {:/nomarkdown}
