--- a/_posts/2022-08-05-ghoul.md
+++ b/_posts/2022-08-05-ghoul.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-ghoul.png" | absolute_url }}" width=800/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 As classic monsters, Ghouls had their 4e debut on the first Monster Manual, and
 would end up making it into the Monster Vault as well. Here, the Monster Manual
 3 gives us a few specialized ghoul variants that can compliment the ones on the
@@ -126,9 +137,8 @@ undead. And now you have enough ghoul stat blocks to make a large variety of
 all-ghoul encounters.
 
 As for my impressions... I like ghouls as opponents, and I would like to repeat
-my warning from the original article to prefer the MV ghouls over the MM1 ones.
+my warning from the original article to prefer the MV ghouls over the MM1
+ones. The ones from this book pair well with the MV versions.
 
-
-
-
+[1]: {{ "/projects/mm3-4e" | relative_url }}
 [2]: {{ "/2020/03/20/ghoul.html" | relative_url }}
