--- a/_posts/2022-08-14-girallon.md
+++ b/_posts/2022-08-14-girallon.md
@@ -6,11 +6,22 @@ tags:
     - lets-read
 ---
 
-Remember how, way back in the "Ape" entry, I commented that I wasn't fond of the
-"pulp fiction carnivorous gorilla" cliches some of them were leaning on? Then
-you might imagine how I feel about this particular monster. I first saw them in
-the 3e Monster Manual, but they might have appeared in a supplement for an
-earlier edition.
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-girallon.png" | absolute_url }}" width=800/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
+Remember how, way back in the ["Ape"][2] entry, I commented that I wasn't fond
+of the "pulp fiction carnivorous gorilla" cliches some of them were leaning on?
+Then you might imagine how I feel about this particular monster. I first saw
+them in the 3e Monster Manual, but they might have appeared in a supplement for
+an earlier edition.
 
 A girallon is what happens when you take every single one of those cliches, lump
 them together, and double the result. It's an evil carnivorous gorilla that has
@@ -92,3 +103,7 @@ Mechanically, the Girallon is a basic paragon-tier brute, serviceable but not
 spectacular. The enhanced versions add more interesting special attacks, so
 depending on your needs you might want to down-level an alpha instead of using
 the basic version.
+
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
+[2]: {{ "/2022/05/04/ape.html" | relative_url }}
