--- a/_posts/2022-08-16-gnolls.md
+++ b/_posts/2022-08-16-gnolls.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This post is part of a series! Click [here][1] to see the others.
+
 Oh boy, more gnolls. They've been in every Monster Manual for this edition. I
 skipped the MM2 entry because it turned out to fully overlap the Monster Vault,
 but the one in this book is specifically meant to complement the MV instead of
@@ -101,3 +103,5 @@ them in a fight by themselves and have them work as normal minions.
 I continue to mourn the fact that they never expanded playable non-evil gnolls
 beyond that single Dragon article, while remarking that the mechanics for these
 gnolls are pretty interesting.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
