--- a/_posts/2022-08-19-gremlin.md
+++ b/_posts/2022-08-19-gremlin.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-gremlin.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Just look at this pointy boy. They're not even trying to hide the inspiration
 for him.
 
@@ -135,3 +146,5 @@ Since a lot of gremlins can knock PCs prone, they also go really well with
 monsters that can do ugly things to prone PCs. Especially evil GMs might want to
 keep in mind that 2 Gremlin Deceivers and 2 Needlefang Drake Swarms make up a
 valid Level 3 encounter.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
