--- a/_posts/2022-08-20-hag.md
+++ b/_posts/2022-08-20-hag.md
@@ -6,7 +6,19 @@ tags:
     - lets-read
 ---
 
-As I mentioned way back in the MM/MV post about [Hags][1], they're a species of
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-hag.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
+
+As I mentioned way back in the MM/MV post about [Hags][2], they're a species of
 fey that resemble fairytale witches in appearance and behavior. They tend to
 have great knowledge of magic, but also tend use it to further selfish and
 greedy schemes.
@@ -158,3 +170,6 @@ witches do.
 That said, I think treating each hag stat block as an entirely different species
 is going a bit too far. I prefer to treat those as differences of skill and
 training.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
+[2]: {{ "/2020/05/16/hag.html" | relative_url }}
