--- a/_posts/2022-08-22-howler.md
+++ b/_posts/2022-08-22-howler.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-howler.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the other.s
+
 Howlers totally feel like a 3e monster, probably because of the art. I suppose
 they might have shown up in AD&D too, it's not like the game was ever shy about
 adding one more dog monster to the pile.
@@ -111,3 +122,5 @@ campaign in place of wargs and other similarly-leveled canine menaces for added
 variety. The Doom Mastiff's ability to act as a mount also makes it an possible
 replacement for a Nightmare. Anyone who would ride an Evil Fire Horse would also
 certainly ride an Evil Fear Dog.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
