--- a/_posts/2022-08-22-howler.md
+++ b/_posts/2022-08-22-howler.md
@@ -15,7 +15,7 @@ tags:
 </figure>
 {:/nomarkdown}
 
-This post is part of a series! Click [here][1] to see the other.s
+This post is part of a series! Click [here][1] to see the others.
 
 Howlers totally feel like a 3e monster, probably because of the art. I suppose
 they might have shown up in AD&D too, it's not like the game was ever shy about
