--- a/_posts/2022-08-24-imix.md
+++ b/_posts/2022-08-24-imix.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-imix.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Sit down dear readers, for there's a lot of lore coming your way. Imix himself
 first appeared in the Fiend Folio for AD&D 1e, along with the other Elemental
 Princes. His writeup here also melds two classic stories from the 1e era.
@@ -126,3 +137,5 @@ For extra pain, you can set the battle in a Font of Power aligned to Fire. This
 is a special terrain type listed in the DMG that gives damage bonus to attacks
 with the appropriate damage type. An epic one gives +15 damage, and it certainly
 makes sense for Imix's own seat of power to qualify as a Font.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
