Fixes and a new post

--- a/_posts/2022-08-29-imix-part-02.md
+++ b/_posts/2022-08-29-imix-part-02.md
@@ -1,10 +1,21 @@
 ---
 layout: post
-title: 'Let's Read the 4e Monster Manual 3: Imix, Part 2"
+title: "Let's Read the 4e Monster Manual 3: Imix, Part 2"
 tags:
     - dnd4
     - lets-read
 ---
+
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-imix-cultists.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
 
 In this post we'll take a look at the kind of people who make up Imix's cult in
 the middle world. As mentioned in [Part 1][2], the cult promises to give its
@@ -226,3 +237,6 @@ There are plenty of fire-themed monsters in all of those categories, but it's
 more interesting if you vary the composition of Team Monster and include some
 members who rely on untyped damage or other damage types. It will prevent your
 PCs from trivializing these encounters by stacking fire protection.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
+[2]: {% post_url 2022-08-24-imix %}
