--- a/_posts/2022-08-29-imix-part-02.md
+++ b/_posts/2022-08-29-imix-part-02.md
@@ -239,4 +239,4 @@ members who rely on untyped damage or other damage types. It will prevent your
 PCs from trivializing these encounters by stacking fire protection.
 
 [1]: {{ "/projects/mm3-4e" | relative_url }}
-[2]: {% post_url 2022-08-24-imix %}
+[2]: {{ "/2022/08/04/imix.html" | relative_url }}
