--- a/_posts/2022-09-03-kraken.md
+++ b/_posts/2022-09-03-kraken.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-kraken.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Krakens have been in the game since AD&D, but here they get some extra lore.
 
 ## The Lore
@@ -155,3 +166,5 @@ other than the standard +5 solo bonus to saves, so doing that is a good way to
 neutralize their firepower. If your party is heavy on the action denial powers,
 you can make things harder for them by adding a sprinkling of cultist minions
 and a leader-type that can grant them extra saves.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
