--- a/_posts/2022-09-05-kuo-toa.md
+++ b/_posts/2022-09-05-kuo-toa.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-kuo-toa.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Kuo-toa made their 4e debut in the Monster Manual, and would get a MV style
 upgrade in Dungeon 193. This entry gives us extra stat blocks that don't overlap
 with either, even though it came out months before the Dungeon update.
@@ -96,4 +107,5 @@ These go well with the Dungeon 193 updated kuo-toa, and if you're already using
 those then you'll like these ones. No big lore changes here, but the stat blocks
 are cool enough.
 
+[1]: {{ "/projects/mm3-4e" | relative_url }}
 [2]: https://bira.github.io/octopus-carnival/2020/06/17/kuo-toa.html
