--- a/_posts/2022-09-03-kraken.md
+++ b/_posts/2022-09-03-kraken.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-tags: "Let's Read the 4e Monster Manual 3: Kraken"
+title: "Let's Read the 4e Monster Manual 3: Kraken"
 tags:
     - dnd4
     - lets-read
