Lolth and nymph pictures

--- a/_posts/2022-09-07-lolth.md
+++ b/_posts/2022-09-07-lolth.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-lolth.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Lolth is likely to be among the very first Big Bads of D&D. I think her first
 officially published mention was in The Village of Hommlet, an adventure
 published in 1979 featuring one of her priests as the final antagonist. Since
@@ -19,11 +30,11 @@ she officially became the patron goddess of the drow and started getting a lot
 more publicity. The drow and their goddess would get plenty of spotlight time in
 that edition and all subsequent ones, for good and ill.
 
-By the time we get to this entry in the MM3, we've already seen basically every
-other Lolth-associated monster make their appearance, populating the entire
-range from heroic to epic tier. We also heard a lot about Lolth herself as a
-goddess in other supplements. This is where we finally get her stats. She is the
-second "epic end boss" to make an appearance in this book, but not the last.
+By the time we get to this entry in the MM3, we've already seen most
+Lolth-associated monster make their appearances, populating the entire range
+from heroic to epic tier. We also heard a lot about Lolth herself as a goddess
+in other supplements. This is where we finally get her stats. She is the second
+"epic end boss" to make an appearance in this book, but not the last.
 
 ## The Lore
 
@@ -112,11 +123,11 @@ pass a save.
 
 They also have a nasty power named **Worthy Sacrifice**, an area burst attack
 centered on a non-minion drow, spider, or demon ally. This causes the ally to
-explode into gory webs, reducing it 0 HP, and attacks the Reflex of every enemy
-in the blast area. This attack doesn't damage enemies, but immobilizes all those
-it hits (save ends). It also creates a zone of webbed gore that lasts until the
-end of the encounter and immobilizes any non-spider who ends their move inside
-(save ends). This recharges when the Aspect is first bloodied.
+explode into gory webs, reducing it to 0 HP, and attacks the Reflex of every
+enemy in the blast area. This attack doesn't damage enemies, but immobilizes all
+those it hits (save ends). It also creates a zone of webbed gore that lasts
+until the end of the encounter and immobilizes any non-spider who ends their
+move inside (save ends). This recharges when the Aspect is first bloodied.
 
 As minor actions, the aspect can create a **Cloud of Darkness** that blinds and
 blocks line of sight for anyone but itself; and **Change Shape** to appear as a
@@ -134,11 +145,20 @@ about to die anyway.
 
 ### Eclavdra, Exarch of Lolth
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-lolth-eclavdra.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Eclavdra has an interesting publication history. Turns out _she_ is the actual
 final boss of the GDQ series, the one who used to be behind the giant attacks
-and everything. And she's not even a Lolth worshipper there! Killing Lolth in
+and everything. And she's not even a Lolth worshipper there! Facing Lolth in
 those modules is more of a weird detour than the actual thing that solves the
-problem. A reference to this makes it into her descrpition here.
+problem. A reference to this makes it into her description here.
 
 Eclavdra is described by the book as the "quintessential drow". Another way of
 putting it might be that no one in the universe has a deeper understanding of
@@ -228,10 +248,9 @@ but Lolth, and blinds anyone inside who is not Lolth.
 
 When an enemy hits Lolth, she can use a **Dominating Rebuke** as a reaction to
 _automatically_ dominate them for a turn. And as a deity, her **Immortal
-Resilience** allows her to save against any effect that a save can end,
-_immediately_ and _automatically_. This is a "No Action" effect, meaning it
-_always happens_, no matter how many times a turn they hit her with save-ends
-effects.
+Resilience** allows her to immediately roll a save when she is inflicted by any
+effect a save can end. This is a "No Action" effect, meaning it _always
+happens_, giving her a 75% chance of ignoring all save ends effects outright.
 
 The transformation that happens when Drow Lolth hits 0 HP is also an attack. It
 targets all enemies in a Close Burst 10. On a hit they become vulnerable 20 to
@@ -279,7 +298,8 @@ The example quests are:
 
 - **Lolth's Prison**, a demiplane beyond even the Demonweb Pits, where a dread
   Bone Colossus guards the Pendant of Truth. Brandishing the Pendant before the
-  goddess of lies prevents her from discorporating. How will you get there?
+  goddess of lies prevents her from discorporating. How will you get there, and
+  what truths will you find within?
 
 ## Final Impressions
 
@@ -293,8 +313,10 @@ Lolth and avoiding her strikes. This fortunately doesn't affect saves, but even
 so the PC's leaders should have plenty of save-granting abilities and items on
 hand, because failing those saves has dreadful consequences. Conversely, offense
 should focus on abilities that deal direct non-poison damage and whose riders
-are either immediate or last a turn, because she's immune to anything that
-requires a save.
+are either immediate or last a turn, because she's almost immune to anything
+that requires a save.
 
 I also love Eclavdra's description as a Starscream figure. That even works as a
 proper elven surname if you want it to be really on the nose.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
