--- a/_posts/2022-09-10-meazel.md
+++ b/_posts/2022-09-10-meazel.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-meazel.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 This is the first time I'm seeing this monster, but it's been around since the
 1e Fiend Folio. Most iterations kept the same haircut.
 
@@ -120,6 +131,8 @@ faith in an instant cure sold by a charlatan. They suffered the consequences and
 still decided to double down.
 
 I will note that this entry was written way back in 2010. Any similarity between
-meazels and anti-maskers, anti-vaxxers, and choloquine/ivermectin enthusiasts is
-mere coincidence. Mechanically, they're okay. The aura makes for some nice
+meazels and anti-maskers, anti-vaxxers, and chloroquine/ivermectin enthusiasts
+is mere coincidence. Mechanically, they're okay. The aura makes for some nice
 synergies with their other abilities.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
