--- a/_posts/2022-09-11-meenlock.md
+++ b/_posts/2022-09-11-meenlock.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-meenlock.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Another one from the 1e Fiend Folio, though its lore is new for this edition.
 
 ## The Lore
@@ -86,7 +97,8 @@ allied with.
 ### Meenlock Corruptor
 
 This one trades damage potential for increased control. It's devastating to
-party cohesion in both defensive and offensive ambushes.
+party cohesion in both defensive and offensive ambushes. It's a Level 11 Lurker
+with 89 HP.
 
 Once again, its **claws** are simple basic attacks. The star of the show here is
 **Corrupting Mind**, a very complex at-will ranged attack. It deals no damage
@@ -122,3 +134,5 @@ encounter group will spend as much time attacking each other as they will
 fighting the monsters. The corruptor is particularly terrifying in this
 regard. If possible, avoid using more than one of those in an encounter group
 unless you want your PCs to really suffer.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
