Ogrémoch picture and mimic article

--- a/_posts/2022-09-13-mimic.md
+++ b/_posts/2022-09-13-mimic.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-mimic.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Mimics have been in the game since its beginning, and are are one of D&D's most
 iconic monsters. They're also notable for originating within D&D and "breaking
 out" to become a popular monster in other games and media.
@@ -125,3 +136,5 @@ The level mechanics make it seem that mimics start their lives pretty good at
 shapeshifting and get worse at it for a while before reaching their former level
 of skill, but that's just a mechanical artifact. Levels can be adjusted freely -
 you could easily have lower-level spawn and higher level object mimics.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
