--- a/_posts/2022-09-20-minutaur.md
+++ b/_posts/2022-09-20-minutaur.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-mimic.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Minotaurs made their 4e debut right in the [first Monster Manual][2]. They'd
 also appear in the Monster Vault. As it happens with a lot of other monsters in
 the same situation, the MM3 gives us a set of minotaur stat blocks that
@@ -115,5 +126,5 @@ set of thematic powers. It's not something that would have flown in the first
 Monster Manual (which needs to be more generic), but it's very welcome in a
 subsequent supplement like this one. I want more of this!
 
-
+[1]: {{ "/projects/mm3-4e" | relative_url }}
 [2]: https://bira.github.io/octopus-carnival/2020/07/23/minotaur.html
