--- a/_posts/2022-09-22-nagpa.md
+++ b/_posts/2022-09-22-nagpa.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-nagpa.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the others.
+
 Back in 1982, there was a movie named _The Dark Crystal_. It introduced these
 cool villainous vulture people called the Skeksis, which became kind of
 iconic. D&D wanted in on some of that action, so it added a species called the
@@ -118,3 +129,5 @@ I'm going to say the same thing everyone who has reviewed a Nagpa entry always
 says: they're skeksis. The way in which they're skeksis tends to vary with the
 edition, though. I think the ones from the source material were pursuing
 immortality. These ones achieved it, but found that it brings them no joy.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
