--- a/_posts/2022-09-28-nymph.md
+++ b/_posts/2022-09-28-nymph.md
@@ -6,6 +6,8 @@ tags:
     - lets-read
 ---
 
+This post is part of a series! Click [here][1] to see the others.
+
 Nymphs have been in the game since the beginning, and they were always one of
 its many, many "seductress" monsters. The only reason I can think for there
 being so many of them is that Gygax had issues.
@@ -38,6 +40,15 @@ they ignore forest-themed difficult terrain). All of their other abilities vary
 per stat block.
 
 ### Spring Nymph
+
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm3-4e-nymph-spring.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 Spring nymphs are always seeing new life appear everywhere to replace the
 old. They have power over flowers, and adorn themselves with them. They are the
@@ -77,6 +88,15 @@ pawns. An encounter against _multiple_ spring nymphs is very dangerous, though,
 since they'll be able to dominate multiple PCs.
 
 ### Autumn Nymphs
+
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm3-4e-nymph-autumn.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 These are the most melancholic members of the family. Autumn is the season when
 leaves are reaching the end of their lives and remembering their pasts. Autumn
@@ -160,6 +180,15 @@ treelike fey who are hanging around their new sister.
 
 ### Winter Nymph
 
+{::nomarkdown}
+<figure class="left">
+  <img src="{{ "/assets/wir-mm3-4e-nymph-winter.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Winter nymphs live in cold and remote regions, and like their linked season
 they're cruel and harsh. Winter nymphs are all about reveling in the survival of
 the strongest. They run ahead of the Wild Hunt, dressed in buckskin, their
@@ -183,6 +212,15 @@ Appropriate companions for winter nymphs are, of course, the Wild
 Hunt. Paragon-tier fey hounds and perhaps some eladrin or firbolg hunters.
 
 ### Summer Nymph
+
+{::nomarkdown}
+<figure class="right">
+  <img src="{{ "/assets/wir-mm3-4e-nymph-summer.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 Spring is about the potential of the future; autumn about reflecting on the
 past; and summer is the present. Summer nymphs are among the eldest and wisest
@@ -239,3 +277,5 @@ victims, so this is equal-opportunity mind control.
 My favorites are the winter and summer nymphs, who do the most to break that old
 stereotype. The wood nymph comes next for her tree-based shenanigans, though
 narratively she's very redundant with 4e dryads.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
