--- a/_posts/2022-10-02-ogre.md
+++ b/_posts/2022-10-02-ogre.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-oblivion-moss.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the other.
+
 The ogre situation in the Monster Manual 3 is the same as the giant situation:
 they first appeared in the Monster Manual 1, and are about to get new and
 improved versions of those entries in the Monster Vault. The MM3 contains more
@@ -112,4 +123,5 @@ A pretty varied lineup, especially when combined with the [Monster Vault
 ogres][2]. It should easily allow you to build all-ogre encounters for use as
 the inhabitants of a lair or as a special unit in some other villainous force.
 
+[1]: {{ "/projects/mm3-4e" | relative_url }}
 [2]: {{ "/2020/08/13/ogre.html" | relative_url }}
