--- a/_posts/2022-10-04-ogremoch.md
+++ b/_posts/2022-10-04-ogremoch.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-ogrémoch.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the other.
+
 Ogrémoch is another of the Princes of Elemental Evil, and first appeared
 alongside Imix in the Fiend Folio for AD&D 1e. He is the second, but not the
 last, epic campaign end boss to make an appearance on the MM3.
@@ -273,5 +284,5 @@ living earthquake that's also trying to petrify you. This much action denial on
 a single monster is usually a design no-no, but we're talking about a solo
 endgame boss here, so I feel it's more than justified.
 
-
+[1]: {{ "/projects/mm3-4e" | relative_url }}
 [2]: {{ "/2020/06/05/human.html" | relative_url }}
