--- a/_posts/2022-10-02-ogre.md
+++ b/_posts/2022-10-02-ogre.md
@@ -8,7 +8,7 @@ tags:
 
 {::nomarkdown}
 <figure class="center">
-  <img src="{{ "/assets/wir-mm3-4e-oblivion-moss.png" | absolute_url }}"/>
+  <img src="{{ "/assets/wir-mm3-4e-ogre.png" | absolute_url }}"/>
   <figcaption>
     Copyright 2010 Wizards of the Coast.
   </figcaption>
