--- a/_posts/2022-10-06-rot-grub.md
+++ b/_posts/2022-10-06-rot-grub.md
@@ -6,6 +6,8 @@ tags:
     - lets-read
 ---
 
+This post is part of a series! Click [here][1] to see the other.
+
 Rog grubs have been around more or less since the beginning, though they used to
 be more of a trap than a monster in the past.
 
@@ -70,6 +72,15 @@ olden days. Save-boosting powers and items are a wise investment here.
 
 ### Rot Grub Zombies
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-rot-grub-zombie.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Even grub-infested corpses are a little more active than they used to be! This
 is such a horrible death that it's not uncommon for the victim to rise as a
 zombie soon afterwards. These zombies are on the faster side, and some speculate
@@ -123,3 +134,5 @@ inside corpses found in the dungeon, usually those of previous adventurers. It
 was not uncommon to also place some enticing loot on these corpses. They can
 still be used in this role here, and while they're not as instantly lethal as
 their older versions, they're still quite dangerous.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
