--- a/_posts/2022-10-11-shadow.md
+++ b/_posts/2022-10-11-shadow.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-shadow.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the other.
+
 Shadows have been in the game since the beginning. They were usually undead in
 previous editions, but here they get a bit of new lore.
 
@@ -122,3 +133,5 @@ they're scary because they're _sticky_. The basic stalker can enter your shadow
 and attack you from there until it kills you. The puppetter does the same but
 dominates you to attack your friends while it's doing it. And the strangler
 makes it a lot easier for the other two to do their part.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
