--- a/_posts/2022-10-24-spider.md
+++ b/_posts/2022-10-24-spider.md
@@ -6,14 +6,16 @@ tags:
     - lets-read
 ---
 
+This post is part of a series! Click [here][1] to see the others.
+
 Not only have monstrous spiders been in the game since the beginning, they've
 been on every monster book we read so far. The MM3 is no exception in this
 case.
 
 ## The Monsters
 
-Looks like the Web Walk trait was a Monster Vault innovation. The spiders in the
-MM3 don't yet have it, but it would make sense for them to do so. They do
+Looks like the Web Walk trait was a [Monster Vault][2] innovation. The spiders
+in the MM3 don't have it, but it would make sense for them to do so. They do
 already use fixed math, like the other monsters in this book.
 
 All spiders here have a climb speed equal to their ground speed, with the Spider
@@ -126,3 +128,6 @@ difficult terrain.
 We're starting to repeat ourselves a bit with all these spiders, but it's nice
 to see a low-level example. I also really liked the Feyspitter for its dancing
 venom.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
+[2]: {{ "/2021/01/05/spider.html" | relative_url }}
