--- a/_posts/2022-11-07-tulgar.md
+++ b/_posts/2022-11-07-tulgar.md
@@ -6,6 +6,17 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-tulgar.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
+This post is part of a series! Click [here][1] to see the other.
+
 This is the first time I'm seeing this monster. If they appeared in previous
 editions, it was with a different lore.
 
@@ -150,3 +161,5 @@ on that vengeance but still can never go back to what they were, which is a very
 different story. Maybe some of them might be looking for a way to become full
 spirits again, and it might be something that brings them into alliance with the
 PCs or with sympathetic NPCs.
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
