--- a/_posts/2022-11-11-verbeeg.md
+++ b/_posts/2022-11-11-verbeeg.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-verbeeg.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast.
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 From what I've been able to find out, verbeegs have been in the game since the
 days of AD&D 1st Edition, first appearing in the Monster Manual II. This means
 the game had already run out of synonyms for "Giant" even back then, since their
@@ -57,7 +66,14 @@ of 8 and Low-Light Vision. Their signature trait is the hilarious **Verbeeg
 Stealth**, which allows them to hide and use the Stealth rules as long as even
 as single square they occupy counts as providing total cover or concealment.
 
-<hiding elephant picture here>
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-verbeeg-elephant.png" | absolute_url }}"/>
+  <figcaption>
+    It's surprisingly effective if you're not expecting it.
+  </figcaption>
+</figure>
+{:/nomarkdown}
 
 ### Verbeeg Rowdy
 
