--- a/_posts/2022-11-11-verbeeg.md
+++ b/_posts/2022-11-11-verbeeg.md
@@ -15,6 +15,8 @@ tags:
 </figure>
 {:/nomarkdown}
 
+This article is part of a series! Click [here][1] to see the other entries.
+
 From what I've been able to find out, verbeegs have been in the game since the
 days of AD&D 1st Edition, first appearing in the Monster Manual II. This means
 the game had already run out of synonyms for "Giant" even back then, since their
@@ -146,3 +148,5 @@ You can have lots of fun as a GM if you have your party fight a verbeeg bandit
 gang on a series of hilltops crowned by standing stones. It's both a very
 fey-themed arena, and gives them plenty of hiding places. "These guys are ten
 feet tall, how could they sneak up on us like that?!"
+
+[1]: {{ "/projects/mm3-4e" | relative_url }}
