Fix verbeeg pictures and post weavers

--- a/_posts/2022-11-17-weaver.md
+++ b/_posts/2022-11-17-weaver.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-weaver.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 Weavers have apparently been around since the days of AD&D, appearing in a
 Monstrous Compendium Annual there under the name "Spell Weavers". Their 4e debut
 was actually in Dungeon #165, in the adventure titled "Secrets of the White
