--- a/_posts/2022-11-18-wilden.md
+++ b/_posts/2022-11-18-wilden.md
@@ -6,6 +6,15 @@ tags:
     - lets-read
 ---
 
+{::nomarkdown}
+<figure class="center">
+  <img src="{{ "/assets/wir-mm3-4e-wilden.png" | absolute_url }}"/>
+  <figcaption>
+    Copyright 2010 Wizards of the Coast
+  </figcaption>
+</figure>
+{:/nomarkdown}
+
 I believe wilden are new to 4e, first appearing in the Player's Handbook 3 as an
 option for PCs. This is their corresponding Monster Manual entry.
 
